--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
             <h2>coffee namu's choice</h2>
             <p>커피나무의 달콤한 디저트 컬렉션을 만나보세요.</p>
         </div>
-        <figure class="sliders">
+        <figure class="autoplay">
+            <a href="#"><img src="./image/main_cake1.png" alt="오레오케익"></a>
+            <a href="#"><img src="./image/main_cake2.png" alt="레드벨벳"></a>
+            <a href="#"><img src="./image/main_cake3.png" alt="오라봉쉬폰"></a>
             <a href="#"><img src="./image/main_cake1.png" alt="오레오케익"></a>
             <a href="#"><img src="./image/main_cake2.png" alt="레드벨벳"></a>
             <a href="#"><img src="./image/main_cake3.png" alt="오라봉쉬폰"></a>
