--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <a href="#"><img src="./image/main_cake1.png" alt="오레오케익"></a>
             <a href="#"><img src="./image/main_cake2.png" alt="레드벨벳"></a>
             <a href="#"><img src="./image/main_cake3.png" alt="오라봉쉬폰"></a>
-            <a href="#"><img src="./image/main_cake1.png" alt="오레오케익"></a>
-            <a href="#"><img src="./image/main_cake2.png" alt="레드벨벳"></a>
-            <a href="#"><img src="./image/main_cake3.png" alt="오라봉쉬폰"></a>
+            <a href="#"><img src="./image/main_cake4.png" alt="딸기프로마쥬"></a>
+            <a href="#"><img src="./image/main_cake5.png" alt="얼그레이타르트"></a>
+            <a href="#"><img src="./image/main_cake6.png" alt="고구마케익"></a>
         </figure>
 
     </section>
@@ -164,27 +164,28 @@
             <a href="#"><img src="./image/store_icon.png" alt="매장찾기"></a>
             <a href="#"><img src="./image/customer_icon.png" alt="고객문의"></a>
         </div>
-    </div>
     </section>
-    </div> <!--endwrap-->
     <!-- footer -->
     <footer id="main_footer">
-        <h1><img src="./image/logo_footer.png" alt="푸터로고"></h1>
-        <p class="caution">커피나무 홈페이지는 <span>익스플로어 9.0 이상 크롬</span>에 최적화 되어있습니다.</p>
-        <ul class="footer_menu">
-            <li><a href="#">회사소개</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span></li>
-            <li><a href="#">제휴문의</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span></li>
-            <li><a href="#"><strong>개인정보 처리방침</strong></a></li>
-        </ul>
-        <div class="footer_text">
-        <p>서울시 동작구 상도로 53길 65&nbsp;&nbsp;&nbsp;(주)커피나무 대표자: 백지연&nbsp;&nbsp;&nbsp;개인정보보호책임자: 백승훈&nbsp;&nbsp;&nbsp;사업자등록번호: 108-86-14200</p>
-        <p>TEL: 1577-9173&nbsp;&nbsp;&nbsp;FAX: 02-821-0744&nbsp;&nbsp;&nbsp;E-MAIL: info@coffeenamu.co.kr</p>
-        </div>
-        <p class="copy">Copyright &copy; Coffee namu. All right Reserved.</p>
-        <div class="footer_sns">
-            <a href="#"><img class="face" src="./image/facebook.png" alt="페이스북"></a>
-            <a href="#"><img class="insta" src="./image/insta.png" alt="인스타그램"></a>
-            <a href="#"><img class="you" src="./image/youtube.png" alt="유투브"></a>
+        <div class="footer_wrap">
+            <h1><img src="./image/logo_footer.png" alt="푸터로고"></h1>
+            <p class="caution">커피나무 홈페이지는 <span>익스플로어 9.0 이상 크롬</span>에 최적화 되어있습니다.</p>
+            <ul class="footer_menu">
+                <li><a href="#">회사소개</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span></li>
+                <li><a href="#">제휴문의</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span></li>
+                <li><a href="#"><strong>개인정보 처리방침</strong></a></li>
+            </ul>
+            <div class="footer_text">
+            <p>서울시 동작구 상도로 53길 65&nbsp;&nbsp;&nbsp;(주)커피나무 대표자: 백지연&nbsp;&nbsp;&nbsp;개인정보보호책임자: 백승훈&nbsp;&nbsp;&nbsp;사업자등록번호: 108-86-14200</p>
+            <p>TEL: 1577-9173&nbsp;&nbsp;&nbsp;FAX: 02-821-0744&nbsp;&nbsp;&nbsp;E-MAIL: info@coffeenamu.co.kr</p>
+            </div>
+            <p class="copy">Copyright &copy; Coffee namu. All right Reserved.</p>
+            <div class="footer_sns">
+                <a href="#"><img class="face" src="./image/facebook.png" alt="페이스북"></a>
+                <a href="#"><img class="insta" src="./image/insta.png" alt="인스타그램"></a>
+                <a href="#"><img class="you" src="./image/youtube.png" alt="유투브"></a>
+            </div>
+        </div> <!--wrap end-->    
     </footer>
 </body>
 </html>
