--- a/index.html
+++ b/index.html
@@ -140,14 +140,15 @@
             <p>커피나무의 다양한 소식들을 만나보세요.</p>
         </div>
         <div class="sns_img">
-            <a href="#"><img src="./image/sns_1.png" alt="sns이미지1"></a>
-            <a href="#"><img src="./image/sns_2.png" alt="sns이미지2"></a>
-            <a href="#"><img src="./image/sns_3.png" alt="sns이미지3"></a>
-            <a href="#"><img src="./image/sns_4.png" alt="sns이미지4"></a>
-            <a href="#"><img src="./image/sns_5.png" alt="sns이미지5"></a>
-            <a href="#"><img src="./image/sns_6.png" alt="sns이미지6"></a>
-            <a href="#"><img src="./image/sns_7.png" alt="sns이미지7"></a>
-            <a href="#"><img src="./image/sns_8.png" alt="sns이미지8"></a>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_1.png" alt="sns이미지1"></a>
+            </div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_2.png" alt="sns이미지2"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_3.png" alt="sns이미지3"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_4.png" alt="sns이미지4"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_5.png" alt="sns이미지5"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_6.png" alt="sns이미지6"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_7.png" alt="sns이미지7"></a></div>
+            <div class="img_wrap"><a href="#"><img src="./image/sns_8.png" alt="sns이미지8"></a></div>
         </div>
     </section>
     <!-- content4: notice, store... -->
